--- a/jsons/translations/Russian.properties
+++ b/jsons/translations/Russian.properties
@@ -1,1 +1,73 @@
+
+#################### Lines from Buildings ####################
+
+ # Requires translation!
+Hockey Stadium = 
+
+
+#################### Lines from Nations ####################
+
+ # Requires translation!
+Vaclau Lastouski = 
+ # Requires translation!
+We're tired of tensions, enough! Prepare for war! = 
+ # Requires translation!
+Are you gonna to grab our lands? Come on, get it! = 
+ # Requires translation!
+Our homeland will forever remain in hearts of our people. = 
+ # Requires translation!
+Hello there, my name is Vaclau Lastouski, I am presenting independent Belarus! = 
+ # Requires translation!
+Would you be interested in this exchange? = 
+ # Requires translation!
+Witayu! How are you doing? = 
+ # Requires translation!
+Potatoes Land = 
+ # Requires translation!
+Welcome to Belarus, the People Republic! = 
+ # Requires translation!
+Minsk = 
+ # Requires translation!
+Gomel = 
+ # Requires translation!
+Mogilev = 
+ # Requires translation!
+Vitebsk = 
+ # Requires translation!
+Grodno = 
+ # Requires translation!
+Bobruysk = 
+ # Requires translation!
+Baranovichi = 
+ # Requires translation!
+Borisov = 
+ # Requires translation!
+Pinsk = 
+ # Requires translation!
+Orsha = 
+ # Requires translation!
+Mozyr' = 
+ # Requires translation!
+Soligorsk = 
+ # Requires translation!
+Novopolotsk = 
+ # Requires translation!
+Lida = 
+ # Requires translation!
+Molodechno = 
+ # Requires translation!
+Polotsk = 
+ # Requires translation!
+Zhlobin = 
+ # Requires translation!
+Svetlogorsk = 
+ # Requires translation!
+Rechitsa = 
 Belarus = Беларусь
+
+
+#################### Lines from Units ####################
+
+ # Requires translation!
+Partisans = 
+
