--- a/jsons/translations/Russian.properties
+++ b/jsons/translations/Russian.properties
@@ -2,72 +2,72 @@
 #################### Lines from Buildings ####################
 
  # Requires translation!
-Hockey Stadium = 
+Hockey Stadium = Хоккейный стадион
 
 
 #################### Lines from Nations ####################
 
  # Requires translation!
-Vaclau Lastouski = 
+Vaclau Lastouski = Вацлав Ластовский
  # Requires translation!
-We're tired of tensions, enough! Prepare for war! = 
+We're tired of tensions, enough! Prepare for war! = Мы устали от напряженности, достаточно! Готовьтесь к войне!
  # Requires translation!
-Are you gonna to grab our lands? Come on, get it! = 
+Are you gonna to grab our lands? Come on, get it! = Вы хотите забрать наши земли? Давай, попробуй!
  # Requires translation!
-Our homeland will forever remain in hearts of our people. = 
+Our homeland will forever remain in hearts of our people. = Наша родина навсегда останется в сердцах наших людей.
  # Requires translation!
-Hello there, my name is Vaclau Lastouski, I am presenting independent Belarus! = 
+Hello there, my name is Vaclau Lastouski, I am presenting independent Belarus! = Приветствую, меня зовут Вацлав, я представляю независимую Беларусь!
  # Requires translation!
-Would you be interested in this exchange? = 
+Would you be interested in this exchange? = Вы заинтересованы в этом обмене?
  # Requires translation!
-Witayu! How are you doing? = 
+Witayu! How are you doing? = Вітаю! Как поживаете?
  # Requires translation!
-Potatoes Land = 
+Potatoes Land = Картофельные поля
  # Requires translation!
-Welcome to Belarus, the People Republic! = 
+Welcome to Belarus, the People Republic! = Добро пожаловать в Беларусь, народную республику!
  # Requires translation!
-Minsk = 
+Minsk = Минск
  # Requires translation!
-Gomel = 
+Gomel = Гомель
  # Requires translation!
-Mogilev = 
+Mogilev = Могилёв
  # Requires translation!
-Vitebsk = 
+Vitebsk = Витебск
  # Requires translation!
-Grodno = 
+Grodno = Гродно
  # Requires translation!
-Bobruysk = 
+Bobruysk = Бобруйск
  # Requires translation!
-Baranovichi = 
+Baranovichi = Барановичи
  # Requires translation!
-Borisov = 
+Borisov = Борисов
  # Requires translation!
-Pinsk = 
+Pinsk = Пинск
  # Requires translation!
-Orsha = 
+Orsha = Орша
  # Requires translation!
-Mozyr' = 
+Mozyr' = Мозырь
  # Requires translation!
-Soligorsk = 
+Soligorsk = Солигорск
  # Requires translation!
-Novopolotsk = 
+Novopolotsk = Новополоцк
  # Requires translation!
-Lida = 
+Lida = Лида
  # Requires translation!
-Molodechno = 
+Molodechno = Молодечно
  # Requires translation!
-Polotsk = 
+Polotsk = Полоцк
  # Requires translation!
-Zhlobin = 
+Zhlobin = Жлобин
  # Requires translation!
-Svetlogorsk = 
+Svetlogorsk = Светлогорск
  # Requires translation!
-Rechitsa = 
+Rechitsa = Речица
 Belarus = Беларусь
 
 
 #################### Lines from Units ####################
 
  # Requires translation!
-Partisans = 
+Partisans = Партизаны
 
