--- a/jsons/translations/Russian.properties
+++ b/jsons/translations/Russian.properties
@@ -10,19 +10,19 @@ Hockey Stadium = Хоккейный стадион
  # Requires translation!
 Vaclau Lastouski = Вацлав Ластовский
  # Requires translation!
-We're tired of tensions, enough! Prepare for war! = Мы устали от напряженности, достаточно! Готовьтесь к войне!
+We're tired of disputes, enough! Prepare for war! = Мы устали от разногласий, достаточно! Готовьтесь к войне!
  # Requires translation!
-Are you gonna to grab our lands? Come on, get it! = Вы хотите забрать наши земли? Давай, попробуй!
+Are you gonna to grab our lands? Come on, get it! = Собираешься забрать наши земли? Давай, попытайся!
  # Requires translation!
-Our homeland will forever remain in hearts of our people. = Наша родина навсегда останется в сердцах наших людей.
+You are disgusting! How dare you... = Ты отвратителен! Как ты посмел...
  # Requires translation!
-Hello there, my name is Vaclau Lastouski, I am presenting independent Belarus! = Приветствую, меня зовут Вацлав, я представляю независимую Беларусь!
+Hello there, my name is Vaclau, I am presenting Belarus! = Приветствую, меня зовут Вацлав, я представляю Беларусь!
  # Requires translation!
 Would you be interested in this exchange? = Вы заинтересованы в этом обмене?
  # Requires translation!
 Witayu! How are you doing? = Вітаю! Как поживаете?
  # Requires translation!
-Potatoes Land = Картофельные поля
+Potatoes Fields = Картофельные поля
  # Requires translation!
 Welcome to Belarus, the People Republic! = Добро пожаловать в Беларусь, народную республику!
  # Requires translation!
