--- a/jsons/translations/Russian.properties
+++ b/jsons/translations/Russian.properties
@@ -1,12 +1,9 @@
 
 #################### Lines from Buildings ####################
 
- # Requires translation!
 Hockey Stadium = Хоккейный стадион
 
-
 #################### Lines from Nations ####################
-
  # Requires translation!
 Vaclau Lastouski = Вацлав Ластовский
  # Requires translation!
@@ -46,7 +43,7 @@ Pinsk = Пинск
  # Requires translation!
 Orsha = Орша
  # Requires translation!
-Mozyr' = Мозырь
+Mozyr = Мозырь
  # Requires translation!
 Soligorsk = Солигорск
  # Requires translation!
@@ -65,9 +62,7 @@ Svetlogorsk = Светлогорск
 Rechitsa = Речица
 Belarus = Беларусь
 
-
 #################### Lines from Units ####################
 
  # Requires translation!
 Partisans = Партизаны
-
