New nations - Kazakhstan, Georgia (#4)
ver 0.2

--- a/jsons/translations/Russian.properties
+++ b/jsons/translations/Russian.properties
@@ -1,73 +1,174 @@
 
 #################### Lines from Buildings ####################
 
- # Requires translation!
 Hockey Stadium = Хоккейный стадион
+
+ # Requires translation!
+Tsikhe = Цикхе
+
+ # Requires translation!
+Kiyiz Ui = Кийиз Уй (юрта)
 
 
 #################### Lines from Nations ####################
 
- # Requires translation!
 Vaclau Lastouski = Вацлав Ластовский
- # Requires translation!
 We're tired of disputes, enough! Prepare for war! = Мы устали от разногласий, достаточно! Готовьтесь к войне!
- # Requires translation!
 Are you gonna to grab our lands? Come on, get it! = Собираешься забрать наши земли? Давай, попытайся!
- # Requires translation!
 You are disgusting! How dare you... = Ты отвратителен! Как ты посмел...
- # Requires translation!
 Hello there, my name is Vaclau, I am presenting Belarus! = Приветствую, меня зовут Вацлав, я представляю Беларусь!
- # Requires translation!
 Would you be interested in this exchange? = Вы заинтересованы в этом обмене?
- # Requires translation!
 Witayu! How are you doing? = Вітаю! Как поживаете?
- # Requires translation!
 Potatoes Fields = Картофельные поля
- # Requires translation!
 Welcome to Belarus, the People Republic! = Добро пожаловать в Беларусь, народную республику!
- # Requires translation!
 Minsk = Минск
- # Requires translation!
 Gomel = Гомель
- # Requires translation!
 Mogilev = Могилёв
- # Requires translation!
 Vitebsk = Витебск
- # Requires translation!
 Grodno = Гродно
- # Requires translation!
 Bobruysk = Бобруйск
- # Requires translation!
 Baranovichi = Барановичи
- # Requires translation!
 Borisov = Борисов
- # Requires translation!
 Pinsk = Пинск
- # Requires translation!
 Orsha = Орша
- # Requires translation!
-Mozyr' = Мозырь
- # Requires translation!
+Mozyr = Мозырь
 Soligorsk = Солигорск
- # Requires translation!
 Novopolotsk = Новополоцк
- # Requires translation!
 Lida = Лида
- # Requires translation!
 Molodechno = Молодечно
- # Requires translation!
 Polotsk = Полоцк
- # Requires translation!
 Zhlobin = Жлобин
- # Requires translation!
 Svetlogorsk = Светлогорск
- # Requires translation!
 Rechitsa = Речица
 Belarus = Беларусь
+
+ # Requires translation!
+Tamar = Тамара
+ # Requires translation!
+God fights with us. You stand alone. = Бог сражается на нашей стороне. Не вашей.
+ # Requires translation!
+Georgian hearts will not tremble before your multitudes. = Грузинские сердца не дрогнут перед вашими полчищами.
+ # Requires translation!
+Walls weren't enough to save Georgia from ruin. Neither was I. = Стены не смогли уберечь Грузию от краха. Не смогла и я.
+ # Requires translation!
+I am Tamar of Georgia. Say what you will and be on your way. = Я Тамара из Грузии. Скажи, что хочешь, и отправляйся в путь.
+ # Requires translation!
+Our folks offers this deal to you. Do you accept? = Наши люди предлагают эту сделку. Вы согласны?
+ # Requires translation!
+Strength in Unity = Сила в единстве
+ # Requires translation!
+Fierce Tamar, only a fool could misjudge Georgia's true measure. Hound your enemies with loyal clansmen who strike from the hills. Encourage your foes to dash their best against your cities' enduring walls. = 
+ # Requires translation!
+The armies of your protectorates will run them down as they flee. If you suffer no fools, great queen, Georgia will not suffer.  = 
+ # Requires translation!
+Tbilisi = Тбилиси
+ # Requires translation!
+Kutaisi = Кутаиси
+ # Requires translation!
+Batumi = Батуми
+ # Requires translation!
+Sukhumi = Сухум
+ # Requires translation!
+Zugdidi = Зугдиди
+ # Requires translation!
+Rustavi = Рустави
+ # Requires translation!
+Poti = Поти
+ # Requires translation!
+Gori = Гори
+ # Requires translation!
+Tskhinvali = Цхинвал
+ # Requires translation!
+Samtredia = Самтредия
+ # Requires translation!
+Kaspi = Каспи
+ # Requires translation!
+Akhalkalaki = Ахалкалаки
+ # Requires translation!
+Mtskheta = Мцхета
+ # Requires translation!
+Telavi = Телави
+ # Requires translation!
+Borjomi = Боржоми
+ # Requires translation!
+Khashuri = Хашури
+ # Requires translation!
+Zestafoni = Зестафони
+ # Requires translation!
+Nicopsia = Никопсия
+ # Requires translation!
+Urbnisi = Урбниси
+ # Requires translation!
+Geguti = Гегути
+ # Requires translation!
+Georgia = Грузия
+
+ # Requires translation!
+Ablai Khan = Аблай Хан
+ # Requires translation!
+We were left no choice but to put you in your place. = Нам не оставили другого выбора как поставить тебя на место.
+ # Requires translation!
+Beware, stranger: The Kazakh Jüzes are unified and order is restored. You will regret it! = Остерегайся, чужеземец: казахские жузы едины и порядок здесь восстановлен. Ты пожалеешь об этом!
+ # Requires translation!
+What are you waiting for? Finish it. = Чего ты ждешь? Закончи с этим.
+ # Requires translation!
+You walk on our steppe as if you were invited. I am not aware of such an arrangement. Explain your presence. = Ты ступаешь в нашу степь так, будто тебя тут ждут. Насколько мне известно нет. Объясни, зачем ты здесь.
+ # Requires translation!
+Trade? = Торговля?
+ # Requires translation!
+Oh, hello. = О, привет.
+ # Requires translation!
+Nomadic Pastoralists = Кочевники-скотоводы
+ # Requires translation!
+Ablai Khan, you are a true leader! You have fought against Kazakh enemies for decades and proved to be an excellent commander and strategist. Your military prowess earned you the title of 'Batyr'! Most supreme Khan, your ancestor includes the mighty founder of the Kazakh Khanate, Janybek Khan. You were destined to lead the Jüzes! Because of your cunning diplomacy, you were recognized as the Khan of all three Jüzes! Unlike other Khans, you did not succumb to external influence, such as the Russian Empire's! You centralized the Kazakh state, effectively forming the foundation of modern Kazakhstan. You would be remembered for centuries to come! = 
+ # Requires translation!
+Oh mighty overlord of the Kazakh steppe, unify the Jüzes once more! Make every minor Khan bow to your might! Surely with your leadership, the Kazakhs will be unstoppable! Can you make your empire flourish culturally and militarily? Can you build a civilization that will stand the test of time? = 
+ # Requires translation!
+Turkistan = Туркистан
+ # Requires translation!
+Astana = Астана
+ # Requires translation!
+Sauran = Сауран
+ # Requires translation!
+Sighnak = Синнак
+ # Requires translation!
+Saraychik = Сарайчик
+ # Requires translation!
+Shymkent = Шымкент
+ # Requires translation!
+Karaganda = Караганда
+ # Requires translation!
+Taraz = Тараз
+ # Requires translation!
+Aktobe = Актобе
+ # Requires translation!
+Pavlodar = Павлодар
+ # Requires translation!
+Oskemen = Оскемен
+ # Requires translation!
+Semey = Семей
+ # Requires translation!
+Oral = Орал
+ # Requires translation!
+Kostanai = Костанай
+ # Requires translation!
+Petropavl = Петропавль
+ # Requires translation!
+Kyzylorda = Кызылорда
+ # Requires translation!
+Temirtau = Темиртау
+ # Requires translation!
+Aktau = Актау
+ # Requires translation!
+Kazakhstan = Казахстан
 
 
 #################### Lines from Units ####################
 
- # Requires translation!
 Partisans = Партизаны
 
+ # Requires translation!
+Khevshur = Хевшур
+
+ # Requires translation!
+Tolu-Batyr = Толу-Батыр
